added bootstrap and static ui

--- a/web-view/index.html
+++ b/web-view/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Proxy API Server</title>
   <link
@@ -16,7 +16,7 @@
 <body>
   <div class="pas-app-header">
     <img src="/logo.webp" alt="logo" class="pas-logo"></img>
-    <h5>Proxy API Server</h5>
+    <h4>Proxy API Server</h4>
   </div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
